--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link-http": "^1.5.15",
+    "apollo-link-schema": "^1.2.3",
+    "apollo-server-micro": "^2.6.8",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.0",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@types/graphql": "^14.2.2",
     "@types/node": "^12.6.2",
     "@types/react": "^16.8.23",
     "typescript": "^3.5.3"
